--- a/contact.html
+++ b/contact.html
@@ -7,101 +7,6 @@
 <title>Contact — Théo Richard</title>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
-<style>
-
-.contact-page {
-    max-width: 560px;
-    margin: 0 auto;
-    padding: 4rem 0 10rem;
-}
-
-.contact-infos {
-    margin-bottom: 4rem;
-    padding-bottom: 4rem;
-    border-bottom: 1px solid #000;
-}
-
-.contact-infos a {
-    display: block;
-    font-family: 'IBM Plex Mono', monospace;
-    font-size: 0.9rem;
-    color: #000;
-    text-decoration: none;
-    margin-bottom: 0.6rem;
-}
-
-.contact-label {
-    font-family: 'IBM Plex Mono', monospace;
-    font-size: 0.75rem;
-    letter-spacing: 0.2em;
-    text-transform: uppercase;
-    opacity: 0.4;
-    margin: 0 0 2rem;
-}
-
-.contact-titre {
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-weight: 400;
-    font-size: clamp(2rem, 5vw, 3rem);
-    margin: 0 0 3rem;
-    line-height: 1;
-}
-
-.contact-form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.contact-form input,
-.contact-form textarea,
-.contact-form select {
-    font-family: 'IBM Plex Mono', monospace;
-    font-size: 0.85rem;
-    padding: 0.8rem 1rem;
-    border: 1px solid rgba(0,0,0,0.2);
-    background: none;
-    color: #000;
-    outline: none;
-    transition: border-color 0.2s ease;
-    resize: vertical;
-    width: 100%;
-}
-
-.contact-form input:focus,
-.contact-form textarea:focus { border-color: #000; }
-
-.contact-form input::placeholder,
-.contact-form textarea::placeholder { opacity: 0.35; }
-
-.contact-form textarea { min-height: 160px; }
-
-.contact-submit {
-    font-family: 'IBM Plex Mono', monospace;
-    font-size: 0.85rem;
-    padding: 0.8rem 2rem;
-    border: 1px solid #000;
-    background: none;
-    color: #000;
-    cursor: pointer;
-    align-self: flex-start;
-    transition: background 0.2s ease, color 0.2s ease;
-    border-radius: 0;
-    -webkit-appearance: none;
-    appearance: none;
-}
-
-.contact-submit:hover { background: #000; color: #fff; }
-
-.contact-merci {
-    font-family: 'IBM Plex Mono', monospace;
-    font-size: 0.85rem;
-    opacity: 0.5;
-    display: none;
-    margin-top: 1rem;
-}
-
-</style>
 </head>
 
 <body>
@@ -121,6 +26,7 @@
 
 <div class="contact-page">
 
+  <!-- Infos directes, cliquables, sans hover -->
   <div class="contact-infos">
     <p class="contact-label">Me retrouver</p>
     <a href="mailto:contact@theo-richard.fr">✉ contact@theo-richard.fr</a>
@@ -133,13 +39,11 @@
   <form class="contact-form" id="contactForm"
         action="https://formspree.io/f/mykddaag"
         method="POST">
-
     <input type="text"  name="nom"     placeholder="Votre nom" required>
     <input type="email" name="email"   placeholder="Votre email" required>
     <input type="text"  name="sujet"   placeholder="Sujet">
     <textarea           name="message" placeholder="Votre message..." required></textarea>
     <button type="submit" class="contact-submit">Envoyer →</button>
-
   </form>
 
   <p class="contact-merci" id="contactMerci">
