--- a/archive.html
+++ b/archive.html
@@ -5,31 +5,30 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Archive — Théo Richard</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
- <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 <div class="page-wrapper">
 
 <header class="site-header">
- <a href="index.html" class="home-button">
+  <a href="index.html" class="home-button">
     <span class="home-icon">⌂</span> ACCUEIL
-</a>
-    <nav class="top-bar">
-        <a href="photographie.html">PHOTOGRAPHIE</a>
-        <a href="ecriture.html">ÉCRITURE</a>
-        <a href="archive.html">ARCHIVE</a>
-        <a href="contact.html">CONTACT</a>
-    </nav>
+  </a>
+  <nav class="top-bar">
+    <a href="photographie.html">PHOTOGRAPHIE</a>
+    <a href="ecriture.html">ÉCRITURE</a>
+    <a href="archive.html">ARCHIVE</a>
+    <a href="contact.html">CONTACT</a>
+  </nav>
 </header>
 
 <div class="construction-container">
-<h1>PAGE EN CONSTRUCTION</h1>
-<p>Clairement pas <s>commencée</s> terminée, mais en même temps j'ai rien à archiver.</p>
-<p>Pour plus d’informations : contact@theo-richard.fr</p>
-<a href="index.html" class="construction-home-button">Retour à l'accueil</a>
+  <h1>PAGE EN CONSTRUCTION</h1>
+  <p>Clairement pas <s>commencée</s> terminée, mais en même temps j'ai rien à archiver. Tu prends un sac quand tu n'as rien à porter ?</p>
+  <p>Pour plus d'informations : contact@theo-richard.fr</p>
+  <a href="index.html" class="construction-home-button">Retour à l'accueil</a>
 </div>
 
 </div>
