--- a/reflexions.html
+++ b/reflexions.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Réflexions — Théo Richard</title>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&family=IBM+Plex+Mono:wght@400;500&family=Lora:wght@400&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
 
@@ -30,7 +30,7 @@
     <h1>Réflexions</h1>
   </div>
 
-  <!-- Premier article → pointe vers le template pour prévisualisation -->
+  <!-- Premier article pointe vers le template pour prévisualisation -->
   <a href="template-reflexion.html" class="texte-item">
     <div class="texte-meta">
       <span class="texte-titre">Pourquoi je photographie</span>
@@ -39,7 +39,7 @@
     <p class="texte-intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua, ut enim ad minim veniam.</p>
   </a>
 
-  <!-- AJOUTEZ VOS ARTICLES ICI en copiant ce bloc
+  <!-- AJOUTEZ VOS ARTICLES ICI — copiez ce bloc et remplissez :
   <a href="nom-de-larticle.html" class="texte-item">
     <div class="texte-meta">
       <span class="texte-titre">Titre de l'article</span>
