--- a/carnet.html
+++ b/carnet.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Carnet de labo — Théo Richard</title>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&family=IBM+Plex+Mono:wght@400;500&family=Lora:wght@400&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 <style>
 body { background: #000; color: #fff; }
@@ -39,7 +39,7 @@ a, a:visited, a:active { color: #fff; }
     <h1>Carnet de labo</h1>
   </div>
 
-  <!-- Premier article → pointe vers le template pour prévisualisation -->
+  <!-- Premier article pointe vers le template pour prévisualisation -->
   <a href="template-labo.html" class="texte-item">
     <div class="texte-meta">
       <span class="texte-titre">Premier développement</span>
@@ -48,7 +48,7 @@ a, a:visited, a:active { color: #fff; }
     <p class="texte-intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.</p>
   </a>
 
-  <!-- AJOUTEZ VOS ARTICLES ICI en copiant ce bloc
+  <!-- AJOUTEZ VOS ARTICLES ICI — copiez ce bloc et remplissez :
   <a href="nom-de-larticle.html" class="texte-item">
     <div class="texte-meta">
       <span class="texte-titre">Titre de l'article</span>
