--- a/template-labo.html
+++ b/template-labo.html
@@ -13,7 +13,7 @@ a, a:visited, a:active { color: #fff; }
 .site-header { background: #000; }
 .home-button, .top-bar a { color: #fff; }
 .home-button::after, .top-bar a::after { background: #fff; }
-/* Catégorie/retour : plus visible sur fond noir */
+/* Catégorie/retour : plus visible sur fond noir (0.7 au lieu de 0.5) */
 .texte-page-cat { color: rgba(255,255,255,0.7); opacity: 1; }
 .texte-page-header { border-bottom-color: rgba(255,255,255,0.15); }
 .texte-page-date, .texte-lecture { color: rgba(255,255,255,0.4); opacity: 1; }
@@ -52,10 +52,13 @@ a, a:visited, a:active { color: #fff; }
 <div class="texte-page">
 
   <div class="texte-page-header">
-    <!-- Retour à la liste intégré dans la catégorie -->
+    <!-- ← Ce lien sert à la fois de nom de section et de retour à la liste -->
+    <!-- GARDEZ "← Carnet de labo" tel quel pour chaque article Carnet      -->
     <a href="carnet.html" class="texte-page-cat">← Carnet de labo</a>
+
     <!-- REMPLACEZ PAR LE VRAI TITRE -->
     <h1 class="texte-page-titre">Titre de l'article</h1>
+
     <div class="texte-page-meta">
       <!-- REMPLACEZ PAR LA VRAIE DATE -->
       <span class="texte-page-date">Mois Année</span>
@@ -63,7 +66,7 @@ a, a:visited, a:active { color: #fff; }
     </div>
   </div>
 
-  <!-- REMPLACEZ PAR LE VRAI CONTENU -->
+  <!-- REMPLACEZ PAR LE VRAI CONTENU — chaque paragraphe dans un <p> -->
   <div class="texte-page-corps" id="corpsTexte">
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -101,7 +104,7 @@ a, a:visited, a:active { color: #fff; }
     <form class="commentaire-form" id="commentaireForm"
           action="https://formspree.io/f/VOTRE-ID"
           method="POST">
-      <!-- REMPLACEZ la valeur de "article" par le vrai titre -->
+      <!-- REMPLACEZ la valeur par le vrai titre de l'article -->
       <input type="hidden" name="article" value="Titre de l'article">
       <input type="text"   name="nom"     placeholder="Votre nom" required>
       <input type="email"  name="email"   placeholder="Votre email (ne sera pas publié)" required>
@@ -118,10 +121,10 @@ a, a:visited, a:active { color: #fff; }
 <canvas id="storyCanvas" width="1080" height="1920" style="display:none;"></canvas>
 
 <script>
-  // ── TEMPS DE LECTURE ──
-  var corps = document.getElementById('corpsTexte');
-  var nbMots = corps.innerText.trim().split(/\s+/).length;
-  var mins = Math.ceil(nbMots / 200);
+  // ── TEMPS DE LECTURE (200 mots/min) ──
+  var corps   = document.getElementById('corpsTexte');
+  var nbMots  = corps.innerText.trim().split(/\s+/).length;
+  var mins    = Math.ceil(nbMots / 200);
   document.getElementById('tempsLecture').textContent = mins + ' min de lecture';
 
   // ── PARTAGE ──
@@ -129,9 +132,8 @@ a, a:visited, a:active { color: #fff; }
   var titreDoc = document.querySelector('.texte-page-titre').textContent.trim();
   var urlEnc   = encodeURIComponent(pageUrl);
   var titreEnc = encodeURIComponent(titreDoc + ' — Théo Richard');
-
-  var msgWa   = encodeURIComponent('Cet article peut t\'intéresser : "' + titreDoc + '" par Théo Richard\n' + pageUrl);
-  var msgMail = encodeURIComponent('Sujet : ' + titreDoc + ' — Théo Richard\n\nCet article peut t\'intéresser :\n' + pageUrl);
+  var msgWa    = encodeURIComponent('Cet article peut t\'intéresser : "' + titreDoc + '" par Théo Richard\n' + pageUrl);
+  var msgMail  = encodeURIComponent('Sujet : ' + titreDoc + ' — Théo Richard\n\nCet article peut t\'intéresser :\n' + pageUrl);
 
   document.getElementById('btnX').href        = 'https://twitter.com/intent/tweet?text=' + titreEnc + '&url=' + urlEnc;
   document.getElementById('btnFacebook').href = 'https://www.facebook.com/sharer/sharer.php?u=' + urlEnc;
@@ -151,17 +153,17 @@ a, a:visited, a:active { color: #fff; }
   document.getElementById('commentaireForm').addEventListener('submit', async function(e) {
     e.preventDefault();
     var form = e.target;
-    var res = await fetch(form.action, { method: 'POST', body: new FormData(form), headers: { 'Accept': 'application/json' } });
+    var res  = await fetch(form.action, { method: 'POST', body: new FormData(form), headers: { 'Accept': 'application/json' } });
     if (res.ok) {
       form.style.display = 'none';
       document.getElementById('commentaireMerci').style.display = 'block';
     }
   });
 
-  // ── STORY INSTAGRAM — fond noir ──
+  // ── STORY INSTAGRAM (fond noir) ──
   document.getElementById('btnInstagram').addEventListener('click', function() {
     var canvas = document.getElementById('storyCanvas');
-    var ctx = canvas.getContext('2d');
+    var ctx    = canvas.getContext('2d');
     var W = 1080, H = 1920;
 
     ctx.fillStyle = '#000'; ctx.fillRect(0, 0, W, H);
@@ -173,8 +175,7 @@ a, a:visited, a:active { color: #fff; }
     ctx.fillText('CARNET DE LABO', 80, 190);
 
     ctx.fillStyle = '#fff'; ctx.font = '400 90px sans-serif';
-    var mots = titreDoc.split(' ');
-    var lignes = [], ligne = '';
+    var mots = titreDoc.split(' '), lignes = [], ligne = '';
     mots.forEach(function(mot) {
       var test = ligne ? ligne + ' ' + mot : mot;
       if (ctx.measureText(test).width > W - 160 && ligne) { lignes.push(ligne); ligne = mot; }
@@ -193,8 +194,7 @@ a, a:visited, a:active { color: #fff; }
 
     var a = document.createElement('a');
     a.download = 'story-' + titreDoc.toLowerCase().replace(/\s+/g, '-').replace(/[^a-z0-9-]/g, '') + '.png';
-    a.href = canvas.toDataURL('image/png');
-    a.click();
+    a.href = canvas.toDataURL('image/png'); a.click();
   });
 </script>
 
