--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="hero-meta">
       <p class="hero-bio">Studio & Labo.</p>
       <div class="hero-links">
-        <a href="mailto:contact@theo-richard.fr">✉ contact@theo-richard.fr</a>
+        <a href="/cdn-cgi/l/email-protection#a0c3cfced4c1c3d4e0d4c8c5cf8dd2c9c3c8c1d2c48ec6d2">✉ <span class="__cf_email__" data-cfemail="f2919d9c86939186b2869a979ddf809b919a938096dc9480">[email&#160;protected]</span></a>
         <a href="https://instagram.com/the0_richard" target="_blank">◎ @the0_richard</a>
         <a href="photographie.html">→ Voir les photos</a>
       </div>
@@ -75,35 +75,16 @@
 <section class="preview-section">
   <div class="preview-header">
     <h2>Photographie</h2>
+    <a href="photographie.html">Voir tout →</a>
   </div>
   <div class="preview-grid">
-    <div class="preview-item">
-      <img src="image/preview-1.jpg" alt="Aperçu 1" onerror="this.src='https://picsum.photos/400/530?1'">
-    </div>
-    <div class="preview-item">
-      <img src="image/preview-2.jpg" alt="Aperçu 2" onerror="this.src='https://picsum.photos/400/530?2'">
-    </div>
-    <div class="preview-item">
-      <img src="image/preview-3.jpg" alt="Aperçu 3" onerror="this.src='https://picsum.photos/400/530?3'">
-    </div>
-    <!-- Rectangle noir CTA — le lien "Voir tout" du header a été supprimé -->
-    <a href="photographie.html" class="preview-voir-tout">
-      <span>Voir tout →</span>
-    </a>
+    <img src="image/preview-1.jpg" alt="Aperçu 1" onerror="this.src='https://picsum.photos/400/530?1'">
+    <img src="image/preview-2.jpg" alt="Aperçu 2" onerror="this.src='https://picsum.photos/400/530?2'">
+    <img src="image/preview-3.jpg" alt="Aperçu 3" onerror="this.src='https://picsum.photos/400/530?3'">
+    <img src="image/preview-4.jpg" alt="Aperçu 4" onerror="this.src='https://picsum.photos/400/530?4'">
   </div>
 </section>
 
 </div>
 
-<script>
-  document.querySelectorAll('img').forEach(function(img) {
-    if (img.complete) {
-      img.classList.add('loaded');
-    } else {
-      img.addEventListener('load', function() { img.classList.add('loaded'); });
-    }
-  });
-</script>
-
-</body>
-</html>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
