--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
 <section class="preview-section">
   <div class="preview-header">
     <h2>Photographie</h2>
-    <a href="photographie.html">Voir tout →</a>
+    <!-- "Voir tout" aligné au-dessus de la 4e photo via CSS grid -->
+    <div class="preview-voir-lien">
+      <a href="photographie.html">Voir tout →</a>
+    </div>
   </div>
   <div class="preview-grid">
     <img src="image/preview-1.jpg" alt="Aperçu 1" onerror="this.src='https://picsum.photos/400/530?1'">
