--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
   <div class="intro-text">
     <p>
       Je photographie en argentique.
-      Les images sont prises une à une et ont un charme dans l'erreur.<br>
+      Les images sont prises une à une et ont un charme dans l'accesptation de leur imperfection.<br>
       Du sujet à la photo, la route est longue et ici je propose un état des lieux à mi-chemin :<br>
-      Après avoir développé, les photos sont numérisées, puis traitées, mais ce n'est pas la fin de leur aventure : pour connaître la suite <a href="https://instagram.com/the0_richard" target="_blank">rendez-vous sur les réseaux.</a>
+      Après avoir développé les pellicules, les photos sont numérisées, puis traitées, mais ce n'est pas la fin de leur aventure.
+      Pour connaître la suite <a href="https://instagram.com/the0_richard" target="_blank">rendez-vous sur les réseaux.</a>
     </p>
     <p>
       Mon travail tourne autour du quotidien et du portrait : des visages, des rues, des natures mortes ;<br>
