--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
       <a href="photographie.html">Voir tout →</a>
     </div>
   </div>
-  <div class="preview-grid">
-    <img src="image/preview-1.jpg" alt="Aperçu 1" onerror="this.src='https://picsum.photos/400/530?1'">
-    <img src="image/preview-2.jpg" alt="Aperçu 2" onerror="this.src='https://picsum.photos/400/530?2'">
-    <img src="image/preview-3.jpg" alt="Aperçu 3" onerror="this.src='https://picsum.photos/400/530?3'">
-    <img src="image/preview-4.jpg" alt="Aperçu 4" onerror="this.src='https://picsum.photos/400/530?4'">
+  <div class="preview-grid" id="previewGrid">
+    <img src="image/preview-1.jpg" alt="Aperçu 1">
+    <img src="image/preview-2.jpg" alt="Aperçu 2">
+    <img src="image/preview-3.jpg" alt="Aperçu 3">
+    <img src="image/preview-4.jpg" alt="Aperçu 4">
   </div>
 </section>
 
