--- a/carnet.html
+++ b/carnet.html
@@ -15,6 +15,7 @@ a, a:visited, a:active { color: #fff; }
 .home-button::after, .top-bar a::after { background: #fff; }
 .texte-liste-header { border-bottom-color: rgba(255,255,255,0.15); }
 .texte-item { color: #fff; border-bottom-color: rgba(255,255,255,0.12); }
+.site-footer { border-top-color: rgba(255,255,255,0.12); color: rgba(255,255,255,0.3); }
 </style>
 </head>
 
@@ -60,5 +61,13 @@ a, a:visited, a:active { color: #fff; }
 
 </div>
 </div>
+  <footer class="site-footer">
+  <span>© <span id="annee"></span> Théo Richard — Tous droits réservés.</span>
+  <span>Photos, textes et design protégés par le droit d'auteur.</span>
+</footer>
+
+<script>
+  document.getElementById('annee').textContent = new Date().getFullYear();
+</script>
 </body>
 </html>
