--- a/ecriture.html
+++ b/ecriture.html
@@ -41,5 +41,13 @@
 </div>
 
 </div>
+  <footer class="site-footer">
+  <span>© <span id="annee"></span> Théo Richard — Tous droits réservés.</span>
+  <span>Photos, textes et design protégés par le droit d'auteur.</span>
+</footer>
+
+<script>
+  document.getElementById('annee').textContent = new Date().getFullYear();
+</script>
 </body>
 </html>
