--- a/template-labo.html
+++ b/template-labo.html
@@ -31,6 +31,7 @@ a, a:visited, a:active { color: #fff; }
 .commentaire-form textarea::placeholder { color: rgba(255,255,255,0.3); opacity: 1; }
 .commentaire-submit { border-color: #fff; color: #fff; }
 .commentaire-submit:hover { background: #fff; color: #000; }
+.site-footer { border-top-color: rgba(255,255,255,0.12); color: rgba(255,255,255,0.3); }
 </style>
 </head>
 
@@ -197,6 +198,13 @@ a, a:visited, a:active { color: #fff; }
     a.href = canvas.toDataURL('image/png'); a.click();
   });
 </script>
+<footer class="site-footer">
+  <span>© <span id="annee"></span> Théo Richard — Tous droits réservés.</span>
+  <span>Photos, textes et design protégés par le droit d'auteur.</span>
+</footer>
 
+<script>
+  document.getElementById('annee').textContent = new Date().getFullYear();
+</script>
 </body>
 </html>
