--- a/template-reflexion.html
+++ b/template-reflexion.html
@@ -172,6 +172,13 @@
     a.href = canvas.toDataURL('image/png'); a.click();
   });
 </script>
+<footer class="site-footer">
+  <span>© <span id="annee"></span> Théo Richard — Tous droits réservés.</span>
+  <span>Photos, textes et design protégés par le droit d'auteur.</span>
+</footer>
 
+<script>
+  document.getElementById('annee').textContent = new Date().getFullYear();
+</script>
 </body>
 </html>
