--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="hero-meta">
       <p class="hero-bio">Studio & Labo.</p>
       <div class="hero-links">
-        <a href="/cdn-cgi/l/email-protection#a0c3cfced4c1c3d4e0d4c8c5cf8dd2c9c3c8c1d2c48ec6d2">✉ <span class="__cf_email__" data-cfemail="f2919d9c86939186b2869a979ddf809b919a938096dc9480">[email&#160;protected]</span></a>
+        <a id="mailLink">✉ contact@theo-richard.fr</a>>
         <a href="https://instagram.com/the0_richard" target="_blank">◎ @the0_richard</a>
         <a href="photographie.html">→ Voir les photos</a>
       </div>
